--- a/style.css
+++ b/style.css
@@ -4,26 +4,188 @@
   margin: 0;
 }
 
-.nobullets {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+html {
+  background-color: rgb(222, 217, 217);
 }
-
-/* start Individual CSS */
 
 
 a {
   text-decoration: none;
+  color: rgb(12, 170, 162);
 
 }
 
-#imagenstopo {
-  background-color: #EEEAEA;
-  object-position: top right;
-  width: 100%;
-  height: 120px;
+/* Hearder */
 
+header {
+  position: relative;
+  height: 96px;
+}
+
+#login {
+  position: absolute;
+  top: 32px;
+  right: 200px;
+}
+
+#cesta {
+  position: absolute;
+  top:32px;
+  right: 70px;
+}
+
+body header div p {
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.blueb {
+  color: blue;
+  font-weight: bold;
+}
+
+#loginimg {
+  position: absolute;
+  top: 32px;
+  right: 310px;
+  height: 40px;
+  width: 40px;
+  
+  
+}
+
+#cestaimg {
+  position: absolute;
+  top: 32px;
+  right: 140px;
+  height: 40px;
+  width: 40px;
+  
+}
+
+body header div a {
+  text-decoration: none;
+  color: blue;
+  
+}
+
+
+/* start Individual CSS */
+
+/*menu*/
+
+.menu {
+  display: flex;
+  height: 50px;
+  width: 100%;
+  background-color: white;
+  border-top: 1px solid rgb(12, 170, 162, 0.25);
+  list-style: none;
+  justify-content: space-around;
+  align-items: center;
+
+
+}
+
+main nav {
+  position: sticky;
+  top: 0px;
+}
+
+/* menu fixed and shadow*/
+
+
+nav {
+  box-shadow: 0 4px 20px -10px rgb(97, 96, 96);
+}
+
+
+@media screen and (max-width: 600px) {
+
+  .menu {
+    display: flex;
+    flex-direction: column;
+    height: 150px;
+  }
+
+  ul li {
+    text-align: center;
+    list-style: none;
+    font-size: 20px;
+    margin-top: 5px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  main nav {
+    position: inherit;
+  }
+}
+
+
+/*box search*/
+
+::placeholder {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 22px;
+  color: rgb(135, 132, 132, 0.8);
+}
+
+input {
+  display: flex;
+}
+
+input[type="text"] {
+  padding-left: 10px;
+
+}
+
+input[type="submit"] {
+  height: 50px;
+  width: 50px;
+  border: none;
+  border-bottom-left-radius: 18px;
+  border-top-left-radius: 18px;
+  padding-left: 5px;
+  background-color: rgb(135, 132, 132, 0.3);
+  cursor: pointer;
+
+}
+
+input[src="media/lupawithback.jpg"] {
+  width: 50px;
+  height: 50px;
+  border: none;
+  border-bottom-left-radius: 18px;
+  border-top-left-radius: 18px;
+}
+
+
+#imagenstopo {
+  background-color: #ffffff;
+  width: 100%;
+  height: 91px;
+  border-top: 5px solid rgb(201, 8, 8);
+  display: flex;
+
+}
+
+.searchbox {
+  width: 700px;
+  height: 50px;
+  position: absolute;
+  top: 29px;
+  left: 285px;
+
+}
+
+#search {
+  width: 600px;
+  height: 50px;
+  border-top-right-radius: 18px;
+  border-bottom-right-radius: 18px;
+  border: none;
+  background-color: rgb(135, 132, 132, 0.3);
 }
 
 /* sizing images top*/
@@ -38,20 +200,25 @@ header div img {
   position: absolute;
   right: 50px;
   top: 60px;
+
 }
 
 /* sizing logo */
 #logomf {
   max-width: 100%;
   max-height: 100%;
-  width: 276px;
-  height: 80px;
-  padding-left: 1em;
-  padding-top: 1.5em;
+  width: 195px;
+  height: 60px;
+  padding-left: 40px;
+  padding-top: 20px;
 }
 
 main img {
-  width: 100%;
-  height: 345px;
-}
+  display: flex;
+  width: 1240px;
+  height: 370px;
+  border-radius: 17px;
+  margin-top: 50px;
+  margin-left: 60px;
 
+}
