--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ html {
 
 a {
   text-decoration: none;
-  color: rgb(12, 170, 162);
+  color: #008094;
+  ;
 
 }
 
@@ -30,7 +31,7 @@ header {
 
 #cesta {
   position: absolute;
-  top:32px;
+  top: 32px;
   right: 70px;
 }
 
@@ -50,8 +51,8 @@ body header div p {
   right: 310px;
   height: 40px;
   width: 40px;
-  
-  
+
+
 }
 
 #cestaimg {
@@ -60,13 +61,13 @@ body header div p {
   right: 140px;
   height: 40px;
   width: 40px;
-  
+
 }
 
 body header div a {
   text-decoration: none;
   color: blue;
-  
+
 }
 
 
@@ -90,6 +91,8 @@ body header div a {
 main nav {
   position: sticky;
   top: 0px;
+  bottom: 0px;
+  z-index: 2;
 }
 
 /* menu fixed and shadow*/
@@ -221,4 +224,371 @@ main img {
   margin-top: 50px;
   margin-left: 60px;
 
+}
+
+/*miniboxs*/
+
+.minibox {
+  width: 300px;
+  height: 130px;
+  border-radius: 13px;
+  background-color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  box-shadow: 0 10px 20px -10px rgb(97, 96, 96);
+
+
+}
+
+.allminibox {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 55px;
+  margin-left: 55px;
+  margin-right: 55px;
+}
+
+.pminibox {
+  padding-top: 13px;
+  text-align: center;
+
+
+}
+
+.imgminibox {
+  height: 45px;
+  width: auto;
+  margin: 0;
+  padding-top: 20px;
+
+
+}
+
+#delivery {
+  padding-left: 108px;
+  padding-right: 108px;
+}
+
+#tag {
+  padding-left: 130px;
+  padding-right: 130px;
+}
+
+#security {
+  padding-left: 130px;
+  padding-right: 130px;
+}
+
+#produtos {
+  padding-left: 120px;
+  padding-right: 140px;
+}
+
+/* mais vendidos e Promoções */
+
+h2 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: italic;
+  font-size: 36px;
+  color: #008094;
+  margin-left: 90px;
+  margin: 80px;
+  margin-bottom: 30px;
+  margin-top: 80px;
+}
+
+.allboxmv {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 0px;
+  margin-left: 55px;
+  margin-right: 55px;
+}
+
+.mv {
+  width: 250px;
+  height: 350px;
+  border-radius: 13px;
+  background-color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  box-shadow: 0 10px 20px -10px rgb(97, 96, 96);
+
+
+}
+
+.coracao {
+  height: 35px;
+  width: auto;
+  border-radius: 0;
+  margin-top: 23px;
+  margin-right: 25px;
+  margin-left: 189px;
+
+}
+
+.dorflex {
+  height: 200px;
+  width: auto;
+  margin: -25px auto;
+}
+
+.mvbox {
+  padding-top: 13px;
+  text-align: center;
+  font-weight: lighter;
+  padding-top: 0px;
+
+
+}
+
+.mvpreço {
+  padding-top: 10px;
+  text-align: center;
+  font-weight: lighter;
+  font-weight: bold;
+
+}
+
+.button {
+  display: inline-block;
+  color: white;
+  background-color: #59C5FE;
+  height: 50px;
+  width: 165px;
+  border-radius: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  text-align: center;
+  line-height: 50px;
+  margin-left: 43px;
+  margin-top: 15px;
+
+}
+
+.tagpromocao {
+  position: absolute;
+  margin-left: 20px;
+  margin-top: 25px;
+  margin-right: 170px;
+  background-color: #009F4A;
+  color: white;
+  width: 60px;
+  height: 25px;
+  border-radius: 8px;
+  text-align: center;
+  line-height: 25px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+
+}
+
+/* Banners anúncios pequenos */
+
+#minibanners1 {
+  display: flex;
+  justify-content: space-around;
+
+}
+
+.minibanner {
+  width: 610px;
+  height: 100px;
+  margin-left: 0;
+  border-radius: 0px;
+}
+
+/* publi loreal */
+
+.loreal {
+  display: flex;
+  justify-content: space-around;
+}
+
+.bannerloreal {
+  height: 320px;
+  width: auto;
+  border-radius: 10px;
+  margin-left: 0;
+  margin-top: 0;
+}
+
+#minibanners2 {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 110px;
+}
+
+/*footer */
+
+#retangulored {
+  width: 100%;
+  height: 15px;
+  background-color: red;
+
+}
+
+footer {
+  height: 790px;
+  width: 100%;
+  background-color: #F2ECEC;
+  border-top: 45px solid #0E0EAC;
+  position: relative;
+
+
+}
+
+#contatos {
+  height: 190px;
+  width: 1175px;
+  background-color: #E8DDDD;
+  border-radius: 15px;
+  margin: 35px auto;
+  display: flex;
+  justify-content: space-around;
+
+
+}
+
+.divcontatos {
+  width: 300px;
+  height: auto;
+}
+
+.iconescontatos {
+  width: 25px;
+  height: 25px;
+  margin-top: 30px;
+  margin-left: 30px;
+  vertical-align: middle;
+  border-radius: 0;
+
+}
+
+.pcontatos {
+  position: absolute;
+  margin-top: -18px;
+  margin-left: 70px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  color: #0CAAFE;
+}
+
+.pcontatos2, .pcontatos3 {
+  margin-left: 55px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+
+}
+
+#logosrs {
+  display: flex;
+
+}
+
+.logosrs {
+  height: 35px;
+  width: auto;
+  margin-top: 15px;
+  margin-left: 35px;
+
+}
+
+.logosrs2 {
+  margin-left: 10px;
+}
+
+/*formas de pagamento */
+.formasdepagamento {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 30px;
+  width: 300px;
+
+  margin-left: 75px;
+  margin-top: 70px;
+}
+
+.apps {
+  display: flex;
+  justify-content: space-around;
+  vertical-align: top;
+}
+
+.app1 {
+  width: 130px;
+  height: 40px;
+  border-radius: 0px;
+  margin-top: 10px;
+  margin-left: 0px;
+
+}
+
+.app2 {
+  width: 147px;
+  height: 61px;
+  border-radius: 0px;
+  margin: 0px;
+  position: relative;
+}
+
+.cardcredits {
+  display: flex;
+  margin-top: 10px;
+}
+
+.cards {
+  height: 43px;
+  width: 72px;
+  margin-top: 10px;
+  margin-left: 5px;
+  border-radius: 0px;
+}
+
+/*dados gerais */
+
+.dadosgerais {
+  display: flex;
+  width: 200px;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 15px;
+  font-weight: lighter;
+
+}
+
+.listdg {
+  list-style-type: none;
+
+}
+
+.dadosgerais ul a {
+  color: black
+}
+
+.institucional {
+  margin-left: 150px;
+}
+
+/* final */
+
+#logofinalpg {
+  height: 80px;
+  width: 189px;
+  display: grid;
+  grid-column: 1;
+  grid-row: 2;
+  margin: 0px;
+  margin-left: 15px;
+  margin-top: 25px;
+}
+
+#pfinal {
+  display: grid;
+  grid-column: 2/5;
+  opacity: 0.6;
+  padding-top: 25px;
 }
