--- a/style.css
+++ b/style.css
@@ -24,15 +24,67 @@ header {
 }
 
 #login {
+  display: flex;
+  flex-direction: column;
   position: absolute;
-  top: 32px;
-  right: 200px;
+  align-items: center;
+  top: 30px;
+  right: 14.641vw;
+  width: 180px;
+  height: 100px;
+}
+
+#loginimg {
+  position: absolute;
+  left: 5px;
+  height: 40px;
+  width: 40px;
+
+}
+
+.olb {
+  position: absolute;
+  right: 20px;
+  top: 10px;
+}
+
+.blueb {
+  color: blue;
+  font-weight: bold;
+  position: absolute;
+  right: 84px;
+  top: 30px;
 }
 
 #cesta {
+  display: flex;
+  flex-direction: column;
   position: absolute;
-  top: 32px;
-  right: 70px;
+  align-items: center;
+  top: 30px;
+  right: 0.732vw;
+  width: 180px;
+  height: 100px;
+
+}
+
+#cestaimg {
+  position: absolute;
+  left: 5px;
+  height: 40px;
+  width: 40px;
+
+
+}
+
+.mc {
+  position: absolute;
+  right: 75px;
+  top: 10px;
+}
+
+.tcompras {
+  right: 61px;
 }
 
 body header div p {
@@ -40,29 +92,7 @@ body header div p {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.blueb {
-  color: blue;
-  font-weight: bold;
-}
 
-#loginimg {
-  position: absolute;
-  top: 32px;
-  right: 310px;
-  height: 40px;
-  width: 40px;
-
-
-}
-
-#cestaimg {
-  position: absolute;
-  top: 32px;
-  right: 140px;
-  height: 40px;
-  width: 40px;
-
-}
 
 body header div a {
   text-decoration: none;
@@ -84,8 +114,19 @@ body header div a {
   list-style: none;
   justify-content: space-around;
   align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bolder;
 
 
+}
+
+.menu li:hover {
+  font-size: 20px;
+  transition: 0.2s;
+}
+
+.menu li a:hover {
+  color: red;
 }
 
 main nav {
@@ -103,30 +144,12 @@ nav {
 }
 
 
-@media screen and (max-width: 600px) {
-
-  .menu {
-    display: flex;
-    flex-direction: column;
-    height: 150px;
-  }
-
-  ul li {
-    text-align: center;
-    list-style: none;
-    font-size: 20px;
-    margin-top: 5px;
-    display: flex;
-    flex-direction: column;
-  }
-
-  main nav {
-    position: inherit;
-  }
-}
-
-
 /*box search*/
+
+#form {
+  width: 47.584vw;
+  
+}
 
 ::placeholder {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -174,16 +197,16 @@ input[src="media/lupawithback.jpg"] {
 }
 
 .searchbox {
-  width: 700px;
+  width: 51.245vw;
   height: 50px;
   position: absolute;
   top: 29px;
-  left: 285px;
+  left: 20.864vw;
 
 }
 
 #search {
-  width: 600px;
+  width: 40vw;
   height: 50px;
   border-top-right-radius: 18px;
   border-bottom-right-radius: 18px;
@@ -208,11 +231,9 @@ header div img {
 
 /* sizing logo */
 #logomf {
-  max-width: 100%;
-  max-height: 100%;
-  width: 195px;
-  height: 60px;
-  padding-left: 40px;
+  width: 14.275vw;
+  height: 4.392vw;
+  padding-left: 2.928vw;
   padding-top: 20px;
 }
 
@@ -226,15 +247,24 @@ main img {
 
 }
 
+/* banner rotativo */
+
+#bannerrotativo {
+  width: 90vw;
+  height: 27vw;
+  margin-left: 4.392vw;
+  margin-top: 30px;
+}
+
 /*miniboxs*/
 
 .minibox {
-  width: 300px;
-  height: 130px;
-  border-radius: 13px;
+  width: 21.962vw;
+  height: 9.517vw;
+  border-radius: 0.952vw;
   background-color: white;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
+  font-size: 1.171vw;
   font-weight: bold;
   box-shadow: 0 10px 20px -10px rgb(97, 96, 96);
 
@@ -244,45 +274,45 @@ main img {
 .allminibox {
   display: flex;
   justify-content: space-around;
-  margin-top: 55px;
-  margin-left: 55px;
-  margin-right: 55px;
+  margin-top: 4.026vw;
+  margin-left: 4.026vw;
+  margin-right: 4.026vw;
 }
 
 .pminibox {
-  padding-top: 13px;
+  padding-top: 0.952vw;
   text-align: center;
 
 
 }
 
 .imgminibox {
-  height: 45px;
+  height: 3.294vw;
   width: auto;
   margin: 0;
-  padding-top: 20px;
+  padding-top: 1.464vw;
 
 
 }
 
 #delivery {
-  padding-left: 108px;
-  padding-right: 108px;
+  padding-left: 7.906vw;
+  padding-right: 7.906vw;
 }
 
 #tag {
-  padding-left: 130px;
-  padding-right: 130px;
+  padding-left: 9.517vw;
+  padding-right: 9.517vw;
 }
 
 #security {
-  padding-left: 130px;
-  padding-right: 130px;
+  padding-left: 9.517vw;
+  padding-right: 9.517vw;
 }
 
 #produtos {
-  padding-left: 120px;
-  padding-right: 140px;
+  padding-left: 8.785vw;
+  padding-right: 10.249vw;
 }
 
 /* mais vendidos e Promoções */
@@ -290,29 +320,29 @@ main img {
 h2 {
   font-family: Arial, Helvetica, sans-serif;
   font-style: italic;
-  font-size: 36px;
+  font-size: 2.635vw;
   color: #008094;
-  margin-left: 90px;
-  margin: 80px;
-  margin-bottom: 30px;
-  margin-top: 80px;
+  margin-left: 6.589vw;
+  margin: 5.857vw;
+  margin-bottom: 2.196vw;
+  margin-top: 5.857vw;
 }
 
 .allboxmv {
   display: flex;
   justify-content: space-around;
   margin-top: 0px;
-  margin-left: 55px;
-  margin-right: 55px;
+  margin-left: 4.026vw;
+  margin-right: 4.026vw;
 }
 
 .mv {
-  width: 250px;
-  height: 350px;
-  border-radius: 13px;
+  width: 18.302vw;
+  height: 25.622vw;
+  border-radius: 0.952vw;
   background-color: white;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
+  font-size: 1.171vw;
   font-weight: bold;
   box-shadow: 0 10px 20px -10px rgb(97, 96, 96);
 
@@ -320,23 +350,27 @@ h2 {
 }
 
 .coracao {
-  height: 35px;
+  height: 2.562vw;
   width: auto;
   border-radius: 0;
-  margin-top: 23px;
-  margin-right: 25px;
-  margin-left: 189px;
+  margin-top: 1.684vw;
+  margin-right: 1.830vw;
+  margin-left: 13.836vw;
+  display:block;
+  position: relative;
+  top: 1.464vw;
+
 
 }
 
 .dorflex {
-  height: 200px;
+  height: 14.641vw;
   width: auto;
-  margin: -25px auto;
+  margin: -1.830vw auto;
 }
 
 .mvbox {
-  padding-top: 13px;
+  padding-top: 0.952vw;
   text-align: center;
   font-weight: lighter;
   padding-top: 0px;
@@ -345,7 +379,7 @@ h2 {
 }
 
 .mvpreço {
-  padding-top: 10px;
+  padding-top: 0.732vw;
   text-align: center;
   font-weight: lighter;
   font-weight: bold;
@@ -356,33 +390,40 @@ h2 {
   display: inline-block;
   color: white;
   background-color: #59C5FE;
-  height: 50px;
-  width: 165px;
-  border-radius: 10px;
+  height: 3.660vw;
+  width: 12.079vw;
+  border-radius: 0.732vw;
+  border: 0px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 1.464vw;
   text-align: center;
-  line-height: 50px;
-  margin-left: 43px;
-  margin-top: 15px;
+  line-height: 3.660vw;
+  margin-left: 3.148vw;
+  margin-top: 1.098vw;
 
 }
 
+.button:hover {
+  background-color: #139299;
+}
+
+
+
 .tagpromocao {
   position: absolute;
-  margin-left: 20px;
-  margin-top: 25px;
-  margin-right: 170px;
+  margin-left: 1.464vw;
+  margin-top: 1.830vw;
+  margin-right: 12.445vw;
   background-color: #009F4A;
   color: white;
-  width: 60px;
-  height: 25px;
-  border-radius: 8px;
+  width: 4.392vw;
+  height: 1.830vw;
+  border-radius: 4vw;
   text-align: center;
-  line-height: 25px;
+  line-height: 1.830vw;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 14px;
+  font-size: 1.025vw;
 
 }
 
@@ -395,8 +436,8 @@ h2 {
 }
 
 .minibanner {
-  width: 610px;
-  height: 100px;
+  width: 44.656vw;
+  height: 7.321vw;
   margin-left: 0;
   border-radius: 0px;
 }
@@ -409,9 +450,9 @@ h2 {
 }
 
 .bannerloreal {
-  height: 320px;
+  height: 23.426vw;
   width: auto;
-  border-radius: 10px;
+  border-radius: 0.732vw;
   margin-left: 0;
   margin-top: 0;
 }
@@ -419,34 +460,34 @@ h2 {
 #minibanners2 {
   display: flex;
   justify-content: space-around;
-  margin-bottom: 110px;
+  margin-bottom: 8.053vw;
 }
 
 /*footer */
 
 #retangulored {
   width: 100%;
-  height: 15px;
+  height: 1.098vw;
   background-color: red;
 
 }
 
 footer {
-  height: 790px;
+  height: 57.833vw;
   width: 100%;
   background-color: #F2ECEC;
-  border-top: 45px solid #0E0EAC;
+  border-top: 3.294vw solid #0E0EAC;
   position: relative;
 
 
 }
 
 #contatos {
-  height: 190px;
-  width: 1175px;
+  height: 13.909vw;
+  width: 86.018vw;
   background-color: #E8DDDD;
-  border-radius: 15px;
-  margin: 35px auto;
+  border-radius: 1.098vw;
+  margin: 2.562vw auto;
   display: flex;
   justify-content: space-around;
 
@@ -454,15 +495,15 @@ footer {
 }
 
 .divcontatos {
-  width: 300px;
+  width: 21.962vw;
   height: auto;
 }
 
 .iconescontatos {
-  width: 25px;
-  height: 25px;
-  margin-top: 30px;
-  margin-left: 30px;
+  width: 1.830vw;
+  height: 1.830vw;
+  margin-top: 2.196vw;
+  margin-left: 2.196vw;
   vertical-align: middle;
   border-radius: 0;
 
@@ -470,17 +511,17 @@ footer {
 
 .pcontatos {
   position: absolute;
-  margin-top: -18px;
-  margin-left: 70px;
+  margin-top: -1.318vw;
+  margin-left: 5.124vw;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
+  font-size: 1.464vw;
   color: #0CAAFE;
 }
 
 .pcontatos2, .pcontatos3 {
-  margin-left: 55px;
+  margin-left: 4.026vw;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 15px;
+  font-size: 1.098vw;
 
 }
 
@@ -490,27 +531,27 @@ footer {
 }
 
 .logosrs {
-  height: 35px;
+  height: 2.562vw;
   width: auto;
-  margin-top: 15px;
-  margin-left: 35px;
+  margin-top: 1.098vw;
+  margin-left: 2.562vw;
 
 }
 
 .logosrs2 {
-  margin-left: 10px;
+  margin-left: 0.732vw;
 }
 
 /*formas de pagamento */
 .formasdepagamento {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  gap: 30px;
-  width: 300px;
+  grid-template-rows: 1fr;
+  gap: 2.196vw;
+  width: 21.962vw;
 
-  margin-left: 75px;
-  margin-top: 70px;
+  margin-left: 5.490vw;
+  margin-top: 5.124vw;
 }
 
 .apps {
@@ -520,17 +561,17 @@ footer {
 }
 
 .app1 {
-  width: 130px;
-  height: 40px;
+  width: 9.517vw;
+  height: 2.928vw;
   border-radius: 0px;
-  margin-top: 10px;
+  margin-top: 0.732vw;
   margin-left: 0px;
 
 }
 
 .app2 {
-  width: 147px;
-  height: 61px;
+  width: 10.761vw;
+  height: 4.466vw;
   border-radius: 0px;
   margin: 0px;
   position: relative;
@@ -538,14 +579,14 @@ footer {
 
 .cardcredits {
   display: flex;
-  margin-top: 10px;
+  margin-top: 0.732vw;
 }
 
 .cards {
-  height: 43px;
-  width: 72px;
-  margin-top: 10px;
-  margin-left: 5px;
+  height: 3.148vw;
+  width: 5.271vw;
+  margin-top: 0.732vw;
+  margin-left: 0.366vw;
   border-radius: 0px;
 }
 
@@ -553,11 +594,32 @@ footer {
 
 .dadosgerais {
   display: flex;
-  width: 200px;
+  width: 14.641vw;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 15px;
+  font-size: 1.098vw;
   font-weight: lighter;
 
+}
+
+.diviconescontatos {
+  width: 18.302vw;
+  height: 1.830vw;
+  margin-bottom: 1vw;
+}
+
+.divcontatos  div{
+  width: 19.302vw;
+  height: 2.196vw;
+  
+  
+
+}
+
+
+.cont1 {
+  padding-left: 2.562vw;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.1vw;
 }
 
 .listdg {
@@ -570,25 +632,210 @@ footer {
 }
 
 .institucional {
-  margin-left: 150px;
+  margin-left: 10.981vw;
+}
+
+.tituloazul {
+  color: blue;
+  font-weight: bold;
 }
 
 /* final */
 
+#infofinal {
+  display:flex;
+  width: 85%;
+  margin-left: 5.124vw;
+  margin-top: 3vw;
+  
+}
+
 #logofinalpg {
-  height: 80px;
-  width: 189px;
-  display: grid;
+  height: 5.857vw;
+  width: 13.836vw;
+  /* display: grid;
   grid-column: 1;
-  grid-row: 2;
+  grid-row: 2; */
   margin: 0px;
-  margin-left: 15px;
-  margin-top: 25px;
+  margin-left: 1.098vw;
+  margin-top: 1.830vw;
 }
 
 #pfinal {
-  display: grid;
+  font-size: 1.171vw;
+  font-family: Arial, Helvetica, sans-serif;
+  opacity: 0.6;
+  margin-left: 3.660vw;
+ 
+
+  /* display: grid;
   grid-column: 2/5;
   opacity: 0.6;
-  padding-top: 25px;
+  padding-top: 1.830vw; */
+}
+
+/*media query */
+
+@media screen and (max-width: 1100px) {
+  
+  
+  #search {
+    width: 30vw;
+  }
+
+  #login {
+    
+    right: 18vw;
+    width: 180px;
+    height: 50px;
+    margin-left: 10px;
+    
+  }
+
+  #logomf {
+    max-width: 150px;
+    height: 45px;
+    padding-left: 2.928vw;
+    padding-top: 30px;
+  }
+
+  #cesta {
+    right: 0.732vw;
+    width: 180px;
+    height: 50px;
+    margin-left: 10px;
+  
+  }
+
+}
+
+@media screen and (max-width: 768px) {
+  #search {
+    width: 30vw;
+  }
+
+  /* logo */
+  #logomf {
+    max-width: 130px;
+    height: 40px;
+    padding-left: 2.928vw;
+    padding-top: 30px;
+  }
+
+ /* div cesta */
+  #cesta {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    align-items: center;
+    top: 30px;
+    right: 0.732vw;
+    width: 120px;
+    height: 50px;
+  
+  }
+  
+  #cestaimg {
+    position: absolute;
+    left: 5px;
+    height: 40px;
+    width: 40px;
+  
+  
+  }
+  
+  .mc {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+  }
+  
+  .tcompras {
+    right: 15px;
+  }
+  
+
+  /* div login */
+
+  #login {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    align-items: center;
+    top: 30px;
+    right: 18vw;
+    width: 200px;
+    height: 50px;
+    
+  }
+  
+  #loginimg {
+    position: absolute;
+    left: 48px;
+    height: 40px;
+    width: 40px;
+  
+  }
+  
+  .olb {
+    position: absolute;
+    right: 0px;
+    top: 10px;
+  }
+  
+  .blueb {
+    color: blue;
+    font-weight: bold;
+    position: absolute;
+    right: 15px;
+    top: 30px;
+  }
+  
+}
+
+
+@media screen and (max-width: 576px) {
+
+  .menu {
+    display: flex;
+    flex-direction: column;
+    height: 150px;
+  }
+
+  .menu li {
+    text-align: center;
+    list-style: none;
+    font-size: 20px;
+    margin-top: 5px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  main nav {
+    position: inherit;
+  }
+
+  .searchbox, .olb, .tentrar, .mc, .tcompras {
+    display: none;
+  }
+
+  #logomf {
+    width: 180px;
+    height: 50px;
+    padding-left: 30px;
+    padding-top: 25px;
+
+  }
+
+  #cesta {
+    width: 50px;
+    height: 50px;
+    right: 20px;
+  }
+
+  #login {
+    width: 50px;
+    height: 50px;
+    right: 120px;
+  }
 }
